Removed ignored files from Git tracking

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,6 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
+@use 'partials/variables' as *;
 
 .header {
   display: flex;
@@ -81,73 +82,6 @@
       &-link {
         font-size: 1.1rem;
       }
-    }
-  }
-}
-
-.hero {
-  position: relative;
-  height: 500px;
-  overflow: hidden;
-
-  &__image-wrapper {
-    width: 100%;
-    height: 100%;
-  }
-
-  &__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  &__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: $white;
-    width: 100%;
-    padding: 0 20px;
-    box-sizing: border-box;
-    z-index: 2;
-  }
-
-  &__title {
-    font-size: 3rem;
-    margin: 0;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  }
-}
-
-@include mobile {
-  .hero {
-    height: 400px;
-
-    &__title {
-      font-size: 2.5rem;
-    }
-  }
-}
-
-@include tablet {
-  .hero {
-    height: 550px;
-
-    &__title {
-      font-size: 3.5rem;
-    }
-  }
-}
-
-@include desktop {
-  .hero {
-    height: 600px;
-
-    &__title {
-      font-size: 4rem;
     }
   }
 }
