navbar for tablet fixed

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -8,3 +8,7 @@ $BandSite-DarkBlack: #000000;
 $Mercury: #e1e1e1;
 $Alabaster: #fafafa;
 $font-stack: Nunito Sans, sans-serif;
+$mobile-margin: 1rem;
+$mobile-gutter: 1rem;
+$tablet-margin: 1.5rem;
+$tablet-gutter: 1.5rem;
