--- a/styles/global.css
+++ b/styles/global.css
@@ -1,65 +1,98 @@
 .header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding: 40px;
   background-color: #323232;
-  color: #fff;
-  box-sizing: border-box;
   width: 100%;
-  position: relative;
-  z-index: 1;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 1rem 2rem;
+  }
+}
+.header__title {
+  padding: 1rem 0 0.5rem;
+}
+@media screen and (min-width: 768px) {
+  .header__title {
+    padding: 1rem 2rem 1rem 0;
+  }
 }
 .header__title img {
-  max-width: 150px;
-  height: auto;
+  width: 120px;
 }
+
+.nav-container {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .nav-container {
+    width: auto;
+  }
+}
+
 .header__nav {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .header__nav {
+    width: auto;
+    height: 100%;
+  }
 }
 .header__nav-list {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .header__nav-list {
+    flex-direction: row;
+    gap: 2rem;
+    height: 100%;
+  }
 }
 .header__nav-item {
-  margin-right: 20px;
+  position: relative;
+  flex: 1;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .header__nav-item {
+    width: auto;
+    height: 100%;
+    display: flex;
+  }
+}
+.header__nav-item--active::after, .header__nav-item:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  background-color: white;
 }
 .header__nav-link {
   text-decoration: none;
-  color: #fff;
-  font-size: 0.9rem;
-  transition: color 0.3s ease;
-}
-.header__nav-link:hover {
-  border-bottom: 4px solid #ffffff;
+  color: #e1e1e1;
+  font-size: 0.875rem;
+  padding: 0 0 0.75rem 0;
+  display: block;
 }
 @media screen and (min-width: 768px) {
-  .header {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 60px;
-  }
-  .header__title img {
-    max-width: 180px;
-  }
-  .header__nav {
-    margin-top: 0;
-  }
   .header__nav-link {
-    font-size: 1rem;
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
+    border-bottom: 0.25rem solid transparent;
   }
 }
-@media screen and (min-width: 1280px) {
-  .header__title img {
-    max-width: 200px;
-  }
-  .header__nav-link {
-    font-size: 1.1rem;
-  }
+.header__nav-link:hover, .header__nav-link--active {
+  color: white;
+  font-weight: 700;
 }/*# sourceMappingURL=global.css.map */
