--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,83 +5,92 @@
 .header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding: 40px;
   background-color: $BandSite-Black;
-  color: #fff;
-  box-sizing: border-box;
   width: 100%;
-  position: relative;
-  z-index: 1;
+  @include tablet {
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 1rem 2rem;
+  }
 
   &__title {
+    padding: 1rem 0 0.5rem;
+    @include tablet {
+      padding: 1rem 2rem 1rem 0;
+    }
+
     img {
-      max-width: 150px;
-      height: auto;
+      width: 120px;
+    }
+  }
+}
+
+.nav-container {
+  width: 100%;
+  @include tablet {
+    width: auto;
+  }
+}
+
+.header__nav {
+  width: 100%;
+  @include tablet {
+    width: auto;
+    height: 100%;
+  }
+
+  &-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    width: 100%;
+    @include tablet {
+      flex-direction: row;
+      gap: 2rem;
+      height: 100%;
     }
   }
 
-  &__nav {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-
-    &-list {
-      list-style: none;
-      margin: 0;
-      padding: 0;
+  &-item {
+    position: relative;
+    flex: 1;
+    text-align: center;
+    @include tablet {
+      width: auto;
+      height: 100%;
       display: flex;
     }
 
-    &-item {
-      margin-right: 20px;
-    }
-
-    &-link {
-      text-decoration: none;
-      color: #fff;
-      font-size: 0.9rem;
-      transition: color 0.3s ease;
-
-      &:hover {
-        border-bottom: 4px solid $white;
-      }
+    &--active::after,
+    &:hover::after {
+      content: '';
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+      width: 100%;
+      height: 6px;
+      background-color: white;
     }
   }
 
-  @include tablet {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 60px;
-
-    &__title {
-      img {
-        max-width: 180px;
-      }
+  &-link {
+    text-decoration: none;
+    color: $Mercury;
+    font-size: 0.875rem;
+    padding: 0 0 0.75rem 0;
+    display: block;
+    @include tablet {
+      padding: 1rem 0;
+      display: flex;
+      align-items: center;
+      border-bottom: 0.25rem solid transparent;
     }
-
-    &__nav {
-      margin-top: 0;
-
-      &-link {
-        font-size: 1rem;
-      }
-    }
-  }
-
-  @include desktop {
-    &__title {
-      img {
-        max-width: 200px;
-      }
-    }
-
-    &__nav {
-      &-link {
-        font-size: 1.1rem;
-      }
+    &:hover,
+    &--active {
+      color: white;
+      font-weight: 700;
     }
   }
 }
