--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,6 +1,5 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
-@use 'partials/variables' as *;
 
 .header {
   display: flex;
@@ -8,14 +7,20 @@
   align-items: center;
   background-color: $BandSite-Black;
   width: 100%;
+
   @include tablet {
     flex-direction: row;
     align-items: flex-start;
     padding: 1rem 2rem;
   }
 
+  @include desktop {
+    padding: 1rem 10rem;
+  }
+
   &__title {
     padding: 1rem 0 0.5rem;
+
     @include tablet {
       padding: 1rem 2rem 1rem 0;
     }
@@ -26,30 +31,22 @@
   }
 }
 
-.nav-container {
-  width: 100%;
-  @include tablet {
-    width: auto;
-  }
-}
-
 .header__nav {
   width: 100%;
+
   @include tablet {
     width: auto;
-    height: 100%;
   }
 
   &-list {
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: 8rem;
     display: flex;
     width: 100%;
     @include tablet {
-      flex-direction: row;
       gap: 2rem;
-      height: 100%;
     }
   }
 
@@ -57,21 +54,26 @@
     position: relative;
     flex: 1;
     text-align: center;
+    min-width: 4rem;
+
     @include tablet {
-      width: auto;
-      height: 100%;
-      display: flex;
+      flex: none;
     }
 
     &--active::after,
     &:hover::after {
       content: '';
       position: absolute;
-      bottom: -1px;
+      bottom: -2px;
       left: 0;
       width: 100%;
-      height: 6px;
-      background-color: white;
+      height: 4px;
+      background-color: $white;
+
+      @include tablet {
+        bottom: -14px;
+        width: 100%;
+      }
     }
   }
 
@@ -79,18 +81,16 @@
     text-decoration: none;
     color: $Mercury;
     font-size: 0.875rem;
-    padding: 0 0 0.75rem 0;
+    padding: 10px 0 0.75rem 0;
     display: block;
-    @include tablet {
-      padding: 1rem 0;
-      display: flex;
-      align-items: center;
-      border-bottom: 0.25rem solid transparent;
+
+    &:hover {
+      color: $white;
     }
-    &:hover,
-    &--active {
-      color: white;
-      font-weight: 700;
+
+    @include tablet {
+      padding: 1.5rem 0;
+      white-space: nowrap;
     }
   }
 }
