--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,8 +10,8 @@
 
   @include tablet {
     flex-direction: row;
-    align-items: flex-start;
     padding: 1rem 2rem;
+    line-height: 2rem;
   }
 
   @include desktop {
@@ -79,14 +79,17 @@
     font-size: 0.875rem;
     padding: 10px 0 0.75rem 0;
     display: block;
-
-    &:hover {
-      color: $white;
-    }
-
+    line-height: 1.375rem;
+    font-weight: medium 700;
     @include tablet {
       padding: 1.5rem 0;
       white-space: nowrap;
+      font-size: 0.875rem;
+      font-weight: bold 700;
+    }
+
+    &:hover {
+      color: $white;
     }
   }
 }
