feat(sprint-1): improve article font styling and layout for better readablityy

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,6 +1,8 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
-
+* {
+  box-sizing: border-box;
+}
 .header {
   display: flex;
   flex-direction: column;
