--- a/styles/global.css
+++ b/styles/global.css
@@ -32,8 +32,9 @@
     padding: 1rem 2rem 1rem 0;
   }
 }
-.header__title img {
+.header__title__logo {
   width: 120px;
+  height: auto;
 }
 
 .header__nav {
@@ -84,15 +85,22 @@
   font-size: 0.875rem;
   padding: 10px 0 0.75rem 0;
   display: block;
+  font-family: Nunito Sans, sans-serif;
   line-height: 1.375rem;
-  font-weight: medium 700;
+  font-weight: 700;
 }
 @media screen and (min-width: 768px) {
   .header__nav-link {
     padding: 1.5rem 0;
     white-space: nowrap;
     font-size: 1rem;
-    font-weight: Medium 700;
+    font-weight: 700;
+    font-family: Nunito Sans, sans-serif;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header__nav-link {
+    padding: 2rem 0;
   }
 }
 .header__nav-link:hover {
