--- a/styles/global.css
+++ b/styles/global.css
@@ -105,4 +105,8 @@
 }
 .header__nav-link:hover {
   color: #ffffff;
+}
+
+.footer {
+  background-color: #323232;
 }/*# sourceMappingURL=global.css.map */
