--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: "Nunito";
+  src: url(/assets/font/NunitoSans-Regular.woff) format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(/assets/font/NunitoSans-Bold.woff) format("truetype");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(/assets/font/NunitoSans-Medium.woff) format("truetype");
+  font-weight: 500;
+}
 * {
   box-sizing: border-box;
 }
@@ -37,11 +52,11 @@
   height: auto;
 }
 
-.header__nav {
+.header {
   width: 100%;
 }
 @media screen and (min-width: 768px) {
-  .header__nav {
+  .header {
     width: auto;
   }
 }
@@ -79,7 +94,7 @@
     width: 100%;
   }
 }
-.header__nav-link {
+.header-link {
   text-decoration: none;
   color: #e1e1e1;
   font-size: 0.875rem;
@@ -90,7 +105,7 @@
   font-weight: 700;
 }
 @media screen and (min-width: 768px) {
-  .header__nav-link {
+  .header-link {
     padding: 1.5rem 0;
     white-space: nowrap;
     font-size: 1rem;
@@ -99,11 +114,11 @@
   }
 }
 @media screen and (min-width: 1280px) {
-  .header__nav-link {
+  .header-link {
     padding: 2rem 0;
   }
 }
-.header__nav-link:hover {
+.header-link:hover {
   color: #ffffff;
 }
 
