--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,6 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
+@use 'partials/typography' as *;
 * {
   box-sizing: border-box;
 }
@@ -35,14 +36,14 @@
   }
 }
 
-.header__nav {
+.header {
   width: 100%;
 
   @include tablet {
     width: auto;
   }
 
-  &-list {
+  &__nav-list {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -54,7 +55,7 @@
     }
   }
 
-  &-item {
+  &__nav-item {
     position: relative;
     flex: 1;
     text-align: center;
