--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,9 +1,11 @@
 @use 'partials/variables' as *;
 @use 'partials/mixins' as *;
 @use 'partials/typography' as *;
+
 * {
   box-sizing: border-box;
 }
+
 .header {
   display: flex;
   flex-direction: column;
@@ -11,6 +13,7 @@
   background-color: $BandSite-Black;
   width: 100%;
   gap: 30px;
+
   @include tablet {
     flex-direction: row;
     padding: 1rem 2rem;
@@ -25,85 +28,89 @@
     padding: 1rem 0 0.5rem;
     height: 1.25rem;
     width: 7.5rem;
+
     @include tablet {
       padding: 1rem 2rem 1rem 0;
     }
 
-    &__logo {
+    &-logo {
       width: 120px;
       height: auto;
     }
   }
-}
 
-.header {
-  width: 100%;
-
-  @include tablet {
-    width: auto;
-  }
-
-  &__nav-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 8rem;
-    display: flex;
+  &__nav {
     width: 100%;
-    @include tablet {
-      gap: 2rem;
-    }
-  }
 
-  &__nav-item {
-    position: relative;
-    flex: 1;
-    text-align: center;
-    min-width: 4rem;
-
-    &--active::after,
-    &:hover::after {
-      content: '';
-      position: absolute;
-      bottom: -2px;
-      left: 0;
+    &-list {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      gap: 8rem;
+      display: flex;
       width: 100%;
-      height: 4px;
-      background-color: $white;
 
       @include tablet {
-        bottom: -0.8rem;
+        gap: 2rem;
+      }
+    }
+
+    &-item {
+      position: relative;
+      flex: 1;
+      text-align: center;
+      min-width: 4rem;
+
+      &--active::after,
+      &:hover::after {
+        content: '';
+        position: absolute;
+        bottom: -2px;
+        left: 0;
         width: 100%;
+        height: 4px;
+        background-color: $white;
+
+        @include tablet {
+          bottom: -0.8rem;
+          width: 100%;
+        }
+      }
+    }
+
+    &-link {
+      text-decoration: none;
+      color: $white; // Fixed color issue
+      font-size: 0.875rem;
+      padding: 10px 0 0.75rem 0;
+      display: block;
+      font-family: $font-stack;
+      line-height: 1.375rem;
+      font-weight: 700;
+
+      @include tablet {
+        padding: 1.5rem 0;
+        white-space: nowrap;
+        font-size: 1rem;
+        font-weight: 700;
+      }
+
+      @include desktop {
+        padding: 2rem 0;
+      }
+
+      &:hover {
+        color: $white;
       }
     }
   }
 
-  &-link {
-    text-decoration: none;
-    color: $Mercury;
-    font-size: 0.875rem;
-    padding: 10px 0 0.75rem 0;
-    display: block;
-    font-family: $font-stack;
-    line-height: 1.375rem;
-    font-weight: 700;
-    @include tablet {
-      padding: 1.5rem 0;
-      white-space: nowrap;
-      font-size: 1rem;
-      font-weight: 700;
-      font-family: $font-stack;
-    }
-    @include desktop {
-      padding: 2rem 0;
-    }
-
-    &:hover {
-      color: $white;
-    }
+  @include tablet {
+    width: auto;
   }
 }
-//footer
+
+// Footer
 .footer {
   background-color: $BandSite-Black;
 }
