--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,6 +1,6 @@
-@use 'partials/variables' as *;
-@use 'partials/mixins' as *;
-@use 'partials/typography' as *;
+@use './variables' as *;
+@use './mixins' as *;
+@use './typography' as *;
 
 * {
   box-sizing: border-box;
