--- a/styles/shows.css
+++ b/styles/shows.css
@@ -134,7 +134,7 @@ body {
 .hero {
   position: relative;
   width: 100%;
-  height: 450px;
+  height: 650px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -150,17 +150,29 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
+  display: flex;
+}
+.hero__image-wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #323232;
+  opacity: 0.5;
+  z-index: 1;
 }
 .hero__image {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  filter: brightness(50%);
   display: block;
 }
 .hero__content {
-  max-width: 600px;
+  max-width: 800px;
+  width: 550px;
   position: relative;
   z-index: 2;
   display: block;
@@ -175,7 +187,7 @@ body {
 }
 .hero__music {
   width: 100%;
-  max-width: 500px;
+  max-width: 800px;
   border-radius: 10px;
   display: block;
   margin-top: 20px;
