--- a/styles/shows.css
+++ b/styles/shows.css
@@ -134,7 +134,7 @@ body {
 .hero {
   position: relative;
   width: 100%;
-  height: 650px;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
