--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -11,7 +11,7 @@ body {
 .hero {
     position: relative;
     width: 100%;
-    height: 650px;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,6 +28,7 @@ body {
       height: 100%;
       z-index: -1;
       display: flex;
+
       &::before {
         content: '';
         position: absolute;
