--- a/styles/shows.css
+++ b/styles/shows.css
@@ -140,7 +140,7 @@ body {
   justify-content: center;
   text-align: left;
   padding: 40px;
-  color: white;
+  color: #ffffff;
   overflow: hidden;
 }
 .hero__image-wrapper {
@@ -191,4 +191,86 @@ body {
   border-radius: 10px;
   display: block;
   margin-top: 20px;
+}
+
+.shows-table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+}
+
+.table-container {
+  width: 100%;
+  max-width: 800px;
+}
+
+h2 {
+  text-align: left;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.table-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #afafaf;
+  font-weight: 400;
+}
+
+.header-item {
+  flex: 1;
+  text-align: left;
+}
+
+#shows-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+
+.show-row {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 15px 20px;
+  cursor: pointer;
+  border-bottom: 1px solid #e1e1e1;
+}
+.show-row:hover {
+  background-color: #fafafa;
+}
+.show-row.selected {
+  background-color: #e1e1e1;
+}
+
+.details {
+  display: flex;
+  flex: 3;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.show-date {
+  font-weight: bold;
+}
+
+.buy-ticket {
+  flex: 1;
+  background-color: #323232;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 5px;
+  transition: background 0.3s ease;
+}
+.buy-ticket:hover {
+  background-color: #333;
 }/*# sourceMappingURL=shows.css.map */
