--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -5,112 +5,239 @@
 * {
   box-sizing: border-box;
 }
-
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: $BandSite-Black;
   width: 100%;
-  gap: 30px;
+  gap: .125rems;
+  padding: .625rem;
 
   @include tablet {
     flex-direction: row;
-    padding: 1rem 2rem;
-    line-height: 2rem;
+    padding: 2rem 2rem;
+    gap:12.5rem;
+
   }
 
   @include desktop {
     padding: 1rem 10rem;
+    gap:12.5rem;
   }
-
-  &__title {
-    padding: 1rem 0 0.5rem;
-    height: 1.25rem;
-    width: 7.5rem;
-
-    @include tablet {
-      padding: 1rem 2rem 1rem 0;
-    }
-
-    &-logo {
-      width: 120px;
-      height: auto;
-    }
-  }
-
+&__logo{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
   &__nav {
     width: 100%;
+    font-weight: 400;
 
     &-list {
       list-style: none;
       margin: 0;
       padding: 0;
-      gap: 8rem;
+      gap: 2rem;
       display: flex;
-      width: 100%;
-
-      @include tablet {
-        gap: 2rem;
-      }
+      justify-content: center;
     }
 
     &-item {
       position: relative;
-      flex: 1;
       text-align: center;
-      min-width: 4rem;
 
-      &--active::after,
-      &:hover::after {
-        content: '';
-        position: absolute;
-        bottom: -2px;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        background-color: $white;
 
-        @include tablet {
-          bottom: -0.8rem;
-          width: 100%;
-        }
+      &--active .header__nav-link {
+        font-weight: 700;
+        color: $white;
       }
-    }
 
+    }
     &-link {
       text-decoration: none;
-      color: $white; // Fixed color issue
+      color: $Mercury;
       font-size: 0.875rem;
-      padding: 10px 0 0.75rem 0;
+      font-weight: 400;
+      padding: 10px 0;
       display: block;
       font-family: $font-stack;
-      line-height: 1.375rem;
-      font-weight: 700;
+      position: relative;
 
-      @include tablet {
-        padding: 1.5rem 0;
-        white-space: nowrap;
-        font-size: 1rem;
-        font-weight: 700;
-      }
-
-      @include desktop {
-        padding: 2rem 0;
-      }
 
       &:hover {
         color: $white;
+        font-weight: 700;
+        width: 100%;
       }
+
+      @include tablet {
+        font-size: 1rem;
+        font-weight: 700;
+
+
+      }
+
+    }
+  }
+}
+.footer {
+  background-color:$BandSite-DarkBlack;
+  color: $white;
+  text-align: left;
+  padding: 20px;
+  font-family: 'Nunito';
+
+  @include tablet {
+    align-items: center;
+    text-align: center;
+  }
+
+  p {
+    font-weight: 300;
+  }
+
+  &__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+    margin-bottom: 20px;
+    font-family: 'Nunito';
+
+    @include tablet {
+      font-size: 2.25rem;
+      line-height: 2rem;
+      font-weight: 700;
+      padding: 30px;
+    }
+    @include desktop {
+      padding: 34px;
     }
   }
 
-  @include tablet {
-    width: auto;
+  &__socials {
+    display: flex;
+    justify-content: flex-start;
+    gap: 1.25rem;
+    margin-bottom: 20px;
+
+    @include tablet {
+      margin-top: 35px;
+      margin-left: 1.25rem;
+      gap: 2.5rem;
+    }
   }
-}
 
+  &__details {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+    margin: 20px 0;
 
-.footer {
-  background-color: $BandSite-Black;
+    p:nth-child(3),
+    p:nth-child(6),
+    p:nth-child(9) {
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    @include tablet {
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+    }
+  }
+
+  &__top-container {
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__header-container {
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+
+  &__logo {
+    margin-top: 1.875rem;
+    width: 7.5rem;
+    height: 1.25rem;
+  }
+
+  &__address-info {
+    display: flex;
+    flex-direction: column;
+
+    @include desktop {
+      flex-direction: column;
+    }
+  }
+
+  &__bottom-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    @include desktop {
+      flex-direction: column;
+    }
+  }
+
+  &__address-detai {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    @include tablet {
+      flex-direction: row;
+      gap: 40px;
+    }
+
+    @include desktop {
+      flex-direction: row;
+      gap: 2.5rem;
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+    }
+  }
+
+  &__address-first,
+  &__address-second,
+  &__address-third {
+    text-align: left;
+  }
+
+  &__address-heading {
+    font-size: 0.875rem;
+    font-weight: 500;
+    font-family: 'Nunito';
+
+    @include tablet {
+      font-size: 1.5rem;
+    }
+  }
+
+  &__address-email {
+    font-size: 0.875rem;
+    font-family: 'Nunito';
+    font-weight: 400;
+  }
+
+  &__copyright {
+    margin-top: 10px;
+    font-size: 0.8125rem;
+    font-weight: 400;
+    font-family: 'Nunito';
+
+    @include tablet {
+      font-size: 0.875rem;
+    }
+  }
 }
