--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -19,7 +19,7 @@ body {
     padding: 40px;
     color:$white;
     overflow: hidden;
-  
+
     &__image-wrapper {
       position: absolute;
       top: 0;
@@ -41,32 +41,32 @@ body {
         z-index: 1;
       }
     }
-  
+
     &__image {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
     }
-  
+
     &__content {
       max-width: 800px;
       width: 550px;
       position: relative;
-      z-index: 2; 
+      z-index: 2;
       display: block;
     }
-  
+
     &__title {
       font-size: 24px;
       font-weight: bold;
     }
-  
+
     &__subtitle {
       font-size: 36px;
       font-weight: bold;
     }
-  
+
     &__music {
       width: 100%;
       max-width: 800px;
@@ -82,69 +82,83 @@ body {
     padding: 20px;
     width: 100%;
   }
-  
+
   .table-container {
     width: 100%;
     max-width: 800px;
   }
-  
+
   h2 {
     text-align: left;
     font-size: 24px;
     margin-bottom: 20px;
   }
-  
+
   .table-header {
-    display: flex;
+    display: none;
         justify-content: space-between;
         align-items: center;
         color: $silver;
         font-weight: 400;
+        @include tablet{
+          display: flex;
+        }
+        @include desktop{
+          display: flex;
+        }
+
   }
-  
+
   .header-item {
     flex: 1;
     text-align: left;
   }
-  
+
   #shows-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
     width: 100%;
   }
-  
-  
+
+
   .show-row {
-    display: flex
-    ;
+    display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
         padding: 15px 20px;
         cursor: pointer;
         border-bottom: 1px solid $Mercury;
-  
+        @include desktop{
+          flex-direction: row;
+        }
+
     &:hover {
       background-color: $Alabaster;
     }
-  
+
     &.selected {
       background-color:$Mercury;
     }
   }
-  
+
   .details {
     display: flex;
     flex: 3;
     flex-direction: column;
     gap: 5px;
+    @include desktop{
+      flex-direction: row;
+      gap:100px;
+
+    }
   }
-  
+
   .show-date {
     font-weight: bold;
   }
-  
+
   .buy-ticket {
     flex: 1;
     background-color: $BandSite-Black;
@@ -156,9 +170,18 @@ body {
     text-align: center;
     border-radius: 5px;
     transition: background 0.3s ease;
-  
+
     &:hover {
       background-color: #333;
     }
+
   }
-  
+  .mobile-label{
+    color:$silver;
+    @include tablet{
+      display: none;
+    }
+    @include desktop{
+      display: none;
+    }
+  }
