--- a/styles/shows.css
+++ b/styles/shows.css
@@ -23,20 +23,20 @@
   align-items: center;
   background-color: #323232;
   width: 100%;
-  gap: 0.125rems;
-  padding: 0.625rem;
+  gap: 2pxs;
+  padding: 10px;
 }
 @media screen and (min-width: 768px) {
   .header {
     flex-direction: row;
-    padding: 2rem 2rem;
-    gap: 12.5rem;
+    padding: 32px 32px;
+    gap: 200px;
   }
 }
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 1rem 10rem;
-    gap: 12.5rem;
+    padding: 16px 160px;
+    gap: 200px;
   }
 }
 .header__logo {
@@ -52,7 +52,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  gap: 2rem;
+  gap: 32px;
   display: flex;
   justify-content: center;
 }
@@ -67,9 +67,9 @@
 .header__nav-link {
   text-decoration: none;
   color: #e1e1e1;
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: 400;
-  padding: 10px 0;
+  padding: 0.625rem 0;
   display: block;
   font-family: Nunito Sans, sans-serif;
   position: relative;
@@ -81,16 +81,16 @@
 }
 @media screen and (min-width: 768px) {
   .header__nav-link {
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 700;
   }
 }
 
 .footer {
-  background-color: #000000;
+  background-color: #323232;
   color: #ffffff;
   text-align: left;
-  padding: 20px;
+  padding: 1.25rem;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
@@ -103,54 +103,54 @@
   font-weight: 300;
 }
 .footer__title {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 24px;
+  line-height: 32px;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__title {
-    font-size: 2.25rem;
-    line-height: 2rem;
+    font-size: 36px;
+    line-height: 32px;
     font-weight: 700;
-    padding: 30px;
+    padding: 1.875rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__title {
-    padding: 34px;
+    padding: 2.125rem;
   }
 }
 .footer__socials {
   display: flex;
   justify-content: flex-start;
-  gap: 1.25rem;
-  margin-bottom: 20px;
+  gap: 20px;
+  margin-bottom: 1.25rem;
 }
 @media screen and (min-width: 768px) {
   .footer__socials {
-    margin-top: 35px;
-    margin-left: 1.25rem;
-    gap: 2.5rem;
+    margin-top: 2.1875rem;
+    margin-left: 20px;
+    gap: 40px;
   }
 }
 .footer__details {
-  font-size: 0.9rem;
-  line-height: 1.4rem;
-  margin: 20px 0;
+  font-size: 14.4px;
+  line-height: 22.4px;
+  margin: 1.25rem 0;
 }
 .footer__details p:nth-child(3),
 .footer__details p:nth-child(6),
 .footer__details p:nth-child(9) {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0.625rem;
+  margin-bottom: 1.25rem;
 }
 @media screen and (min-width: 768px) {
   .footer__details {
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
   }
 }
 @media screen and (min-width: 768px) {
@@ -169,9 +169,9 @@
   }
 }
 .footer__logo {
-  margin-top: 1.875rem;
-  width: 7.5rem;
-  height: 1.25rem;
+  margin-top: 30px;
+  width: 120px;
+  height: 20px;
 }
 .footer__address-info {
   display: flex;
@@ -200,13 +200,13 @@
 @media screen and (min-width: 768px) {
   .footer__address-detai {
     flex-direction: row;
-    gap: 40px;
+    gap: 2.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__address-detai {
     flex-direction: row;
-    gap: 2.5rem;
+    gap: 40px;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -216,29 +216,29 @@
   text-align: left;
 }
 .footer__address-heading {
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: 500;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__address-heading {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
 }
 .footer__address-email {
-  font-size: 0.875rem;
+  font-size: 14px;
   font-family: "Nunito";
   font-weight: 400;
 }
 .footer__copyright {
-  margin-top: 10px;
-  font-size: 0.8125rem;
+  margin-top: 0.625rem;
+  font-size: 13px;
   font-weight: 400;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__copyright {
-    font-size: 0.875rem;
+    font-size: 14px;
   }
 }
 
