--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -11,25 +11,26 @@
   align-items: center;
   background-color: $BandSite-Black;
   width: 100%;
-  gap: 2pxs;
+  gap: 2px;
   padding: 10px;
 
   @include tablet {
     flex-direction: row;
     padding: 32px 32px;
-    gap:200px;
-
+    gap: 200px;
   }
 
   @include desktop {
     padding: 16px 160px;
-    gap:200px;
+    gap: 200px;
   }
-&__logo{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
+
+  &__logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
   &__nav {
     width: 100%;
     font-weight: 400;
@@ -47,13 +48,12 @@
       position: relative;
       text-align: center;
 
-
       &--active .header__nav-link {
         font-weight: 700;
         color: $white;
       }
-
     }
+
     &-link {
       text-decoration: none;
       color: $Mercury;
@@ -64,25 +64,36 @@
       font-family: $font-stack;
       position: relative;
 
-
       &:hover {
         color: $white;
         font-weight: 700;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -2px;
+        width: min(100%, 1fr);
+        height: 2px;
+        background-color: $white;
+        transition: width 0.3s ease-in-out;
+      }
+
+      &:hover::after {
         width: 100%;
       }
 
       @include tablet {
         font-size: 16px;
         font-weight: 700;
-
-
       }
-
     }
   }
 }
+
 .footer {
-  background-color: $BandSite-Black;
+  background-color:$BandSite-Black;
   color: $white;
   text-align: left;
   padding: 1.25rem;
@@ -95,23 +106,6 @@
 
   p {
     font-weight: 300;
-  }
-
-  &__top-container {
-    @include tablet {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-  }
-
-  &__header-container {
-    @include tablet {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-    }
   }
 
   &__title {
@@ -145,6 +139,48 @@
     }
   }
 
+  &__details {
+    font-size: 14.4px;
+    line-height: 22.4px;
+    margin: 1.25rem 0;
+
+    p:nth-child(3),
+    p:nth-child(6),
+    p:nth-child(9) {
+      margin-top: .625rem;
+      margin-bottom: 1.25rem;
+    }
+
+    @include tablet {
+      flex-direction: column;
+      align-items: center;
+      gap: 1.875rem;
+    }
+  }
+
+  &__top-container {
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__header-container {
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+
+  &__logo {
+    margin-top: 30px;
+    width: 120px;
+    height: 20px;
+  }
+
   &__address-info {
     display: flex;
     flex-direction: column;
@@ -157,7 +193,7 @@
   &__bottom-container {
     display: flex;
     flex-direction: column;
-    justify-content: baseline;
+    justify-content:end;
 
     @include desktop {
       flex-direction: column;
@@ -205,38 +241,12 @@
     font-weight: 400;
   }
 
-
-  &__bottom-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 30px;
-
-    @include tablet {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-
-
-  &__logo {
-    width: 120px;
-    height: auto;
-    order: 1;
-
-    @include tablet {
-      order: 0;
-      margin-right: 20px;
-    }
-  }
-
   &__copyright {
     margin-top: .625rem;
+
     font-size: 13px;
     font-weight: 400;
     font-family: 'Nunito';
-    order: 2;
 
     @include tablet {
       font-size: 14px;
