fixing for tablet comment

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -39,7 +39,7 @@
       list-style: none;
       margin: 0;
       padding: 0;
-      gap: 32px;
+      gap: 6.25rem;
       display: flex;
       justify-content: center;
     }
