--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -11,18 +11,18 @@
   align-items: center;
   background-color: $BandSite-Black;
   width: 100%;
-  gap: 2px;
-  padding: 10px;
+  gap: .125rem;
+  padding: .625rem;
 
   @include tablet {
     flex-direction: row;
-    padding: 32px 32px;
-    gap: 200px;
+    padding: 2rem 2rem;
+    gap: 12.5rem;
   }
 
   @include desktop {
-    padding: 16px 160px;
-    gap: 200px;
+    padding: 1rem 10rem;
+    gap: 12.5rem;
   }
 
   &__logo {
@@ -57,7 +57,7 @@
     &-link {
       text-decoration: none;
       color: $Mercury;
-      font-size: 14px;
+      font-size: .875rem;
       font-weight: 400;
       padding: .625rem 0;
       display: block;
@@ -73,9 +73,9 @@
         content: '';
         position: absolute;
         left: 0;
-        bottom: -2px;
+        bottom: -0.125rem;
         width: min(100%, 1fr);
-        height: 2px;
+        height: .125rem;
         background-color: $white;
         transition: width 0.3s ease-in-out;
       }
@@ -85,7 +85,7 @@
       }
 
       @include tablet {
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 700;
       }
     }
