--- a/styles/shows.css
+++ b/styles/shows.css
@@ -23,20 +23,20 @@
   align-items: center;
   background-color: #323232;
   width: 100%;
-  gap: 2px;
-  padding: 10px;
+  gap: 0.125rem;
+  padding: 0.625rem;
 }
 @media screen and (min-width: 768px) {
   .header {
     flex-direction: row;
-    padding: 32px 32px;
-    gap: 200px;
+    padding: 2rem 2rem;
+    gap: 12.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 16px 160px;
-    gap: 200px;
+    padding: 1rem 10rem;
+    gap: 12.5rem;
   }
 }
 .header__logo {
@@ -67,7 +67,7 @@
 .header__nav-link {
   text-decoration: none;
   color: #e1e1e1;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
   padding: 0.625rem 0;
   display: block;
@@ -82,9 +82,9 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: -2px;
+  bottom: -0.125rem;
   width: min(100%, 1fr);
-  height: 2px;
+  height: 0.125rem;
   background-color: #ffffff;
   transition: width 0.3s ease-in-out;
 }
@@ -93,7 +93,7 @@
 }
 @media screen and (min-width: 768px) {
   .header__nav-link {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
   }
 }
@@ -343,126 +343,106 @@ body {
 }
 .hero__music {
   width: 100%;
-  max-width: 800px;
-  border-radius: 10px;
+  max-width: 50rem;
+  border-radius: 0.625rem;
   display: block;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
-.shows-table {
+.shows {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 1.25rem;
   width: 100%;
 }
-
-.table-container {
+.shows__table {
   width: 100%;
-  max-width: 850px;
+  max-width: 53.125rem;
 }
-
-h2 {
+.shows__title {
   text-align: left;
-  font-size: 24px;
+  font-size: 1.5rem;
   margin-bottom: 1.25rem;
 }
-
-.table-header {
+.shows__header {
   display: none;
-  justify-content: space-between;
-  align-items: center;
   color: #afafaf;
   font-weight: 400;
 }
 @media screen and (min-width: 768px) {
-  .table-header {
+  .shows__header {
     display: flex;
+    justify-content: space-between;
   }
 }
-@media screen and (min-width: 1280px) {
-  .table-header {
-    display: flex;
-  }
-}
-
-.header-item {
-  flex: 1;
+.shows__header-item {
+  flex-grow: 1;
   text-align: left;
 }
-
-#shows-list {
+.shows__list {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-
-.show-row {
+.shows__row {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 15px 0;
-  cursor: pointer;
+  padding: 1rem 0;
   border-bottom: 1px solid #e1e1e1;
 }
-@media screen and (min-width: 1280px) {
-  .show-row {
+@media screen and (min-width: 768px) {
+  .shows__row {
     flex-direction: row;
+    align-items: center;
+  }
+  .shows__row:hover {
+    background-color: #fafafa;
   }
 }
-.show-row:hover {
-  background-color: #fafafa;
-}
-.show-row.selected {
-  background-color: #e1e1e1;
-}
-
-.details {
+.shows__details {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 0.5rem;
+  flex-grow: 1;
 }
-.details > * {
-  width: 100%;
-  min-width: 11.25rem;
-}
-@media screen and (min-width: 1280px) {
-  .details {
+@media screen and (min-width: 768px) {
+  .shows__details {
     flex-direction: row;
+    gap: 1rem;
   }
 }
-
-.show-date {
-  font-weight: bold;
+.shows__label {
+  color: #afafaf;
+  font-size: 0.875rem;
 }
-
-.buy-ticket {
-  flex: 1;
+@media screen and (min-width: 768px) {
+  .shows__label {
+    display: none;
+  }
+}
+.shows__info {
+  font-weight: 600;
+}
+.shows__button {
   background-color: #323232;
   color: white;
   border: none;
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   font-weight: bold;
   cursor: pointer;
   text-align: center;
-  border-radius: 5px;
-  transition: background 0.3s ease;
-}
-.buy-ticket:hover {
-  background-color: #333;
-}
-
-.mobile-label {
-  color: #afafaf;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+  margin-top: 1rem;
+  width: 100%;
 }
 @media screen and (min-width: 768px) {
-  .mobile-label {
-    display: none;
+  .shows__button {
+    margin-top: 0;
+    width: auto;
   }
 }
-@media screen and (min-width: 1280px) {
-  .mobile-label {
-    display: none;
-  }
+.shows__button:hover {
+  background-color: #191919;
 }/*# sourceMappingURL=shows.css.map */
